--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,7 @@ input[type="password"]::-ms-reveal,
 input[type="password"]::-ms-clear {
   display: none;
 }
+body{
+  box-sizing: border-box;
+  height: 100%;
+}
