--- a/src/Pages/ProfilePage.css
+++ b/src/Pages/ProfilePage.css
@@ -1,4 +1,4 @@
-/* Body and Global Styling */
+Body and Global Styling
 /* body {
   font-family: Arial, sans-serif;
   background-color: #f0f8ff;
@@ -8,7 +8,7 @@
   align-items: center;
 } */
 
-.navbar {
+ .navbar {
   width: 100%;
   height: 60px;
   background-color: #007bff;
@@ -128,7 +128,7 @@
   background-color: #0056b3;
 }
 
-h2 {
+/* h2 {
   font-size: 50px;
   margin-bottom: 10px;
   color: #444;
@@ -140,7 +140,7 @@ p {
   color: #000000;
   text-align: left;
   font-size: 23px;
-}
+} */
 
 @media only screen and (max-width: 1200px) {
   .profile-container {
@@ -212,4 +212,4 @@ p {
     padding: 8px 16px;
     font-size: 14px;
   }
-}
+} 
