--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -1,13 +1,18 @@
 .relative {
   height: 60px;
 }
-
+.header{
+  padding: 0 0; 
+}
 
 @media (max-width: 576px) {
   .brand-text {
     font-size: 14px; /* Smaller text size on small screens */
     display: block; /* Ensure the text moves below the icon if needed */
     text-align: center;
+  }
+  .header{
+    padding: 10px 0; 
   }
 
   .fa-brain {
